--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Luis Antonio Garcia Gisbert <luisgg@gmail.com>
 Build-Depends: debhelper (>= 7.0)
 Standards-Version: 3.8.4
 
-Package: android-developer-tools
+Package: android-sdk-installer
 Architecture: all
 Depends: ${misc:Depends}, aurex-cache, oracle-java7-installer
 Description: android developer tools loader package for aurex
