--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,6 @@ Description: android developer tools loader package for aurex
 
 Package: eclipse-adt-plugin
 Architecture: all
-Depends: ${misc:Depends}, aurex-cache, oracle-java7-installer, android-sdk-installer, eclipse-jee-installer | eclipse-juno-sr2 | eclipse-kepler
+Depends: ${misc:Depends}, aurex-cache, oracle-java7-installer, android-sdk-installer, eclipse-jee-installer | eclipse-jee
 Description: eclipse ADT plugin loader package for aurex
  This package downloads and installs eclipse ADT plugin
